# wildfire_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.txt
MapLoader/: MapLoader.py  metadata.txt
advanced/: CMakeLists.txt
advanced/plugin/: __init__.py  metadata.txt  plugin.py
advanced/samples/: map.json
advanced/scripts/: to_json.py
advanced/src/: cell.hpp  main.cpp
advanced/wildfire_simulator_plugin/: plugin.py
basic/: CMakeLists.txt  README.md
basic/samples/: grid_config.json
basic/src/: cell.hpp  main.cpp  state.hpp
forestfireviewer/: Makefile  README.html  README.txt  __init__.py  forestFireViewer.py  forestFireViewer_dialog.py  forestFireViewer_dialog_base.ui  metadata.txt  pb_tool.cfg  resources.py  resources.qrc
forestfireviewer/help/source/: conf.py  index.rst
forestfireviewer/test/: test_forestFireViewer_dialog.py  test_resources.py
res/: config.json
scripts/: csv_to_raster.py  csv_to_temporal.py  raster_to_json.py  to_json.py
scripts/MapLoader/: MapLoader.py
src/: cell.hpp  logger.hpp  main.cpp  state.hpp  temporal_logger.hpp
